--- a/index.html
+++ b/index.html
@@ -1,70 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Proyect HomeWork</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
+
 <body>
-<div class="container1">
+    <div class="container1">
 
-<div class="top"> 
-   <h4> Header Logo</h4> 
-   <h6>header link one</h6>
-   <h6>header link two</h6>
-   <h6>header link three</h6>
-</div>
+        <div class="top">
+            <div class="logo">
+                <h4> Header Logo</h4>
+            </div>
+            <div class="links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </div>
 
-<h1>This website is awesome</h1>
-<p> This website has some subtext that goes under the main title. Its a smaller font and the color is lower contrast</p>
+        <div class="body">
+            <div class="belly">
+                <h1 class="text1">This website is awesome</h2>
 
-<img> 
+                <p class="text2"> This website has some subtext that goes under the main title.<br>
+                     Its a smaller font and
+                    the color is lower
+                    contrast</p>
 
-</div> 
+                <button>Sign up</button>
+            </div>
+            <img src="./pexels-berobscura-1679175123-27935498.jpg" width=" 525px" height="240px">
 
-<div class="container2">
 
-    <h3> Some random information</h3>
+        </div>
 
-    <img>
-    <p>this is some subtext 
-        under an ilustration 
-        or image
-    </p>
 
-    <img>
-    <p>this is some subtext 
-        under an ilustration 
-        or image
-    </p>
 
-    <img>
-    <p>this is some subtext 
-        under an ilustration 
-        or image
-    </p>
-
-    <img>
-    <p>this is some subtext 
-        under an ilustration 
-        or image
-    </p>
-
-</div>
-
-<div class="container3">
-
-    <p> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice. </p>
-</div>
-
-<div class="container4">
-
-    <div class="singup">
-        <p> Call to action it's time!</p>
-        <p>Sing up for our product by clicking that button rigth over there!</p>
-        <button> Sing Up</button>
     </div>
-</div>
+
+        <div class="container2">
+<div class="top2">
+        <h2> Some random information</h2>
+    </div>
+    <div class="fotos">
+
+     <div>
+        <img src="https://images.pexels.com/photos/16541441/pexels-photo-16541441/free-photo-of-mar-playa-vacaciones-gente.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px"> 
+        <p>this is some subtext<br>
+            under an ilustration<br>
+            or image
+        </p>
+    </div>
+    <div>
+        <img  src="https://images.pexels.com/photos/27978911/pexels-photo-27978911/free-photo-of-paisaje-naturaleza-rocas-montana.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px">
+        <p>this is some subtext<br>
+            under an ilustration<br>
+            or image
+        </p>
+    </div>
+    <div>
+        <img src="https://images.pexels.com/photos/27675493/pexels-photo-27675493/free-photo-of-mar-ciudad-puesta-de-sol-playa.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px">
+        <p>this is some subtext<br>
+            under an ilustration<br>
+            or image
+        </p>
+    </div>
+    <div>
+        <img  src="https://images.pexels.com/photos/27245748/pexels-photo-27245748/free-photo-of-paisaje-montanas-naturaleza-niebla.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px">
+        <p>this is some subtext<br>
+            under an ilustration<br>
+            or image
+    </p>
+    </div>
+    </div>
+    </div>
+    </div>
+
+     <div class="container3">
+
+<div class="text3">
+        <p> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All i know is that it looks nice. </p>
+        </div>
+
+        <div class="author">
+            <p>Mr. Guagua</p>
+        </div>
+        
+    </div>
+
+    <!-- <div class="container4">
+
+         <div class="singup">
+            <p> Call to action it's time!</p>
+            <p>Sing up for our product by clicking that button rigth over there!</p>
+            <button> Sing Up</button>
+        </div> -->
+    </div>   
 </body>
+
 </html>
