--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <div class="belly">
                 <h1 class="text1">This website is awesome</h2>
 
-                <p class="text2"> This website has some subtext that goes under the main title.<br>
-                     Its a smaller font and
-                    the color is lower
-                    contrast</p>
+                    <p class="text2"> This website has some subtext that goes under the main title.<br>
+                        Its a smaller font and
+                        the color is lower
+                        contrast</p>
 
-                <button>Sign up</button>
+                    <button>Sign up</button>
             </div>
             <img src="./pexels-berobscura-1679175123-27935498.jpg" width=" 525px" height="240px">
 
@@ -42,65 +42,67 @@
 
     </div>
 
-        <div class="container2">
-<div class="top2">
-        <h2> Some random information</h2>
-    </div>
-    <div class="fotos">
+    <div class="container2">
+        <div class="top2">
+            <h2> Some random information</h2>
+        </div>
+        <div class="fotos">
 
-     <div>
-        <img src="https://images.pexels.com/photos/16541441/pexels-photo-16541441/free-photo-of-mar-playa-vacaciones-gente.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px"> 
-        <p>this is some subtext<br>
-            under an ilustration<br>
-            or image
-        </p>
-    </div>
-    <div>
-        <img  src="https://images.pexels.com/photos/27978911/pexels-photo-27978911/free-photo-of-paisaje-naturaleza-rocas-montana.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px">
-        <p>this is some subtext<br>
-            under an ilustration<br>
-            or image
-        </p>
-    </div>
-    <div>
-        <img src="https://images.pexels.com/photos/27675493/pexels-photo-27675493/free-photo-of-mar-ciudad-puesta-de-sol-playa.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px">
-        <p>this is some subtext<br>
-            under an ilustration<br>
-            or image
-        </p>
-    </div>
-    <div>
-        <img  src="https://images.pexels.com/photos/27245748/pexels-photo-27245748/free-photo-of-paisaje-montanas-naturaleza-niebla.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="168px" height="160px">
-        <p>this is some subtext<br>
-            under an ilustration<br>
-            or image
-    </p>
-    </div>
-    </div>
+            <div>
+                <img src="https://images.pexels.com/photos/16541441/pexels-photo-16541441/free-photo-of-mar-playa-vacaciones-gente.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load"
+                    width="168px" height="160px">
+                <p>this is some subtext<br>
+                    under an ilustration<br>
+                    or image
+                </p>
+            </div>
+            <div>
+                <img src="https://images.pexels.com/photos/27978911/pexels-photo-27978911/free-photo-of-paisaje-naturaleza-rocas-montana.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load"
+                    width="168px" height="160px">
+                <p>this is some subtext<br>
+                    under an ilustration<br>
+                    or image
+                </p>
+            </div>
+            <div>
+                <img src="https://images.pexels.com/photos/27675493/pexels-photo-27675493/free-photo-of-mar-ciudad-puesta-de-sol-playa.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load"
+                    width="168px" height="160px">
+                <p>this is some subtext<br>
+                    under an ilustration<br>
+                    or image
+                </p>
+            </div>
+            <div>
+                <img src="https://images.pexels.com/photos/27245748/pexels-photo-27245748/free-photo-of-paisaje-montanas-naturaleza-niebla.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load"
+                    width="168px" height="160px">
+                <p>this is some subtext<br>
+                    under an ilustration<br>
+                    or image
+                </p>
+            </div>
+        </div>
     </div>
     </div>
 
-     <div class="container3">
+    <div class="container3">
 
-<div class="text3">
-        <p> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+        <p class="text3"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+            space, or maybe
             people will actually read it. Who knows? All i know is that it looks nice. </p>
-        </div>
+        <p class="author">Mr. Guagua</p>
 
-        <div class="author">
-            <p>Mr. Guagua</p>
-        </div>
-        
     </div>
 
-    <!-- <div class="container4">
+    <div class="container4">
 
-         <div class="singup">
-            <p> Call to action it's time!</p>
-            <p>Sing up for our product by clicking that button rigth over there!</p>
+         <div class="box1">
+            <div class="boxtext"> 
+            <h3> Call to action it's time!</h3>
+            <p class="p1">Sing up for our product by clicking that button rigth over there!</p>
+        </div>
             <button> Sing Up</button>
-        </div> -->
-    </div>   
+        </div>
+    </div>
 </body>
 
 </html>
