--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
         </div>
             <button> Sing Up</button>
         </div>
+
+        
     </div>
+    <div class="container5">
+    <p> Copyright © The Odin Project 2021</p>
+</div>
 </body>
 
 </html>
